[gd_scene load_steps=13 format=2]

[ext_resource path="res://Presets/Fuente.tres" type="DynamicFont" id=1]
[ext_resource path="res://Presets/BotonComunTema.tres" type="Theme" id=2]
[ext_resource path="res://Presets/Fuente_pequeña.tres" type="DynamicFont" id=3]
[ext_resource path="res://Presets/stylebox_focus.tres" type="StyleBox" id=4]
[ext_resource path="res://Presets/stylebox_disabled.tres" type="StyleBox" id=5]
[ext_resource path="res://Objetos/PanelConfiguracion.gd" type="Script" id=6]
[ext_resource path="res://Recursos/Sonidos/click.mp3" type="AudioStream" id=7]
[ext_resource path="res://Recursos/Sonidos/click2.mp3" type="AudioStream" id=8]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.207843, 0.156863, 0.156863, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 0.572549, 0.356863, 0.356863, 1 )
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5
expand_margin_left = 4.0
expand_margin_right = 4.0
expand_margin_top = 4.0
expand_margin_bottom = 4.0

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.87451, 0.305882, 0.211765, 1 )
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color( 0.854902, 0.501961, 0.501961, 1 )
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5
corner_detail = 5
expand_margin_left = 2.0
expand_margin_right = 2.0
expand_margin_top = 2.0
expand_margin_bottom = 2.0
shadow_color = Color( 0.116211, 0.0806894, 0.0806894, 0.6 )
shadow_size = 4
shadow_offset = Vector2( 0, 2 )

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0.811765, 0.180392, 0.0745098, 1 )
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color( 0.87451, 0.305882, 0.211765, 1 )
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5
corner_detail = 5
expand_margin_left = 2.0
expand_margin_right = 2.0
expand_margin_top = 2.0
expand_margin_bottom = 2.0
shadow_color = Color( 0.116211, 0.0806894, 0.0806894, 0.6 )
shadow_size = 4
shadow_offset = Vector2( 0, 2 )

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 0.811765, 0.180392, 0.0745098, 1 )
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color( 0.854902, 0.501961, 0.501961, 1 )
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5
corner_detail = 5
shadow_color = Color( 0.116211, 0.0806894, 0.0806894, 0.6 )
shadow_size = 4
shadow_offset = Vector2( 0, 2 )

[node name="PanelConfiguracion" type="Control"]
theme = ExtResource( 2 )
script = ExtResource( 6 )

[node name="Panel" type="Panel" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -262.0
margin_top = -134.0
margin_right = 262.0
margin_bottom = 134.0

[node name="texto" type="Label" parent="Panel"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -70.0
margin_top = 14.0
margin_right = 70.0
margin_bottom = 56.0
custom_fonts/font = ExtResource( 1 )
text = "Configuración"

[node name="HBoxContainer" type="HBoxContainer" parent="Panel"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -224.5
margin_top = -21.0
margin_right = 224.5
margin_bottom = 21.0
size_flags_horizontal = 3
size_flags_vertical = 3
alignment = 1

[node name="VolumenLabel" type="Label" parent="Panel/HBoxContainer"]
margin_right = 222.0
margin_bottom = 42.0
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 1 )
text = "Volumen "

[node name="HBoxContainer" type="HBoxContainer" parent="Panel/HBoxContainer"]
margin_left = 226.0
margin_right = 449.0
margin_bottom = 42.0
size_flags_horizontal = 3
custom_constants/separation = 14
alignment = 1

[node name="infoVolumen" type="Label" parent="Panel/HBoxContainer/HBoxContainer"]
margin_top = 8.0
margin_right = 26.0
margin_bottom = 34.0
custom_fonts/font = ExtResource( 3 )
custom_styles/normal = SubResource( 1 )
text = "000"
valign = 1

[node name="MarginContainer" type="MarginContainer" parent="Panel/HBoxContainer/HBoxContainer"]
margin_left = 40.0
margin_right = 223.0
margin_bottom = 42.0
size_flags_horizontal = 3
custom_constants/margin_top = 5

[node name="SliderVolumen" type="HSlider" parent="Panel/HBoxContainer/HBoxContainer/MarginContainer"]
margin_top = 5.0
margin_right = 183.0
margin_bottom = 37.0
size_flags_horizontal = 3
value = 80.0

[node name="salir" type="Button" parent="Panel"]
margin_left = 18.0
margin_top = 16.0
margin_right = 50.0
margin_bottom = 53.0
custom_fonts/font = ExtResource( 3 )
custom_styles/hover = SubResource( 2 )
custom_styles/pressed = SubResource( 3 )
custom_styles/focus = ExtResource( 4 )
custom_styles/disabled = ExtResource( 5 )
custom_styles/normal = SubResource( 4 )
text = "X"

[node name="okBoton" type="Button" parent="Panel"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -58.5
margin_top = -79.0
margin_right = 58.5
margin_bottom = -27.0
text = "  Aceptar  "

[node name="sonidoEjemplo" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 7 )

[node name="click_sonido" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 8 )
pitch_scale = 2.59

[connection signal="drag_ended" from="Panel/HBoxContainer/HBoxContainer/MarginContainer/SliderVolumen" to="." method="_on_SliderVolumen_drag_ended"]
[connection signal="value_changed" from="Panel/HBoxContainer/HBoxContainer/MarginContainer/SliderVolumen" to="." method="_on_SliderVolumen_value_changed"]
[connection signal="pressed" from="Panel/salir" to="." method="_on_salir_pressed"]
[connection signal="pressed" from="Panel/okBoton" to="." method="_on_okBoton_pressed"]
